tests/endtoend/failure/expected/error_nested_ivar_conflict.compile.out
error_nested_ivar_conflict.silly:3:5: error: Induction variable i used by enclosing FOR

    3 |     FOR (INT32 i: (0, 2)) {  // redeclaration error
      |     ^
